--- a/search.html
+++ b/search.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ✅ Іконки сайту для всіх пристроїв -->
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#00fff2">
+
+  <!-- Android favicon / PWA icons -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png">
+
+  <!-- iOS підтримка -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="apple-touch-icon" href="/icon-512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icon-512.png">
+
   <title>🔍 Пошук — KinoSite</title>
   <link rel="stylesheet" href="style.css" />
   <style>
