--- a/header.html
+++ b/header.html
@@ -61,8 +61,26 @@
   </div>
 </div>
 
-<a href="/category.html?type=Мультфільм">Мультфільми</a>
-<a href="/category.html?type=Мультсеріал">Мультсеріали</a>
+<!-- === МЕНЮ МУЛЬТФІЛЬМИ === -->
+<div class="dropdown">
+  <a href="/category.html?type=Мультфільм" class="menu-cartoons">Мультфільми</a>
+  <div class="mega-menu">
+    <div class="genres">
+      <a href="/category.html?type=Мультфільм">Усі мультфільми</a>
+    </div>
+  </div>
+</div>
+
+<!-- === МЕНЮ МУЛЬТСЕРІАЛИ === -->
+<div class="dropdown">
+  <a href="/category.html?type=Мультсеріал" class="menu-multseries">Мультсеріали</a>
+  <div class="mega-menu">
+    <div class="genres">
+      <a href="/category.html?type=Мультсеріал">Усі мультсеріали</a>
+    </div>
+  </div>
+</div>
+
 
 <a href="/new.html">Новинки</a>
 <a href="/collections.html">Збірки фільмів</a>
