--- a/header.html
+++ b/header.html
@@ -56,6 +56,7 @@
       <a href="/category.html?type=Серіал&genre=Трилери">Трилери (серіали)</a>
       <a href="/category.html?type=Серіал&genre=Жахи">Жахи (серіали)</a>
       <a href="/category.html?type=Серіал&genre=Дорами">Дорами</a>
+      <a href="/category.html?type=Серіал&genre=Дорами">Документальні</a>
       <a href="/category.html?type=Серіал&genre=Міні серіали">Міні серіали</a>
     </div>
   </div>
