--- a/profile.html
+++ b/profile.html
@@ -419,7 +419,7 @@ function onTelegramAuth(user) {
 
 <div id="telegram-widget">
   <script async src="https://telegram.org/js/telegram-widget.js?22"
-    data-telegram-login="RelaxBox_UA_bot"
+    data-telegram-login="KinoTochkaUA_bot"
     data-size="large"
     data-userpic="false"
     data-request-access="write"
@@ -459,10 +459,10 @@ document.addEventListener("click", (e) => {
       msg.remove();
       if (isMobile) {
         // 📱 відкриває безпосередньо Telegram-додаток
-        window.location.href = "tg://resolve?domain=RelaxBox_UA_bot";
+        window.location.href = "tg://resolve?domain=KinoTochkaUA_bot";
       } else {
         // 💻 відкриває web.telegram.org
-        window.open("https://t.me/RelaxBox_UA_bot", "_blank");
+        window.open("https://t.me/KinoTochkaUA_bot", "_blank");
       }
     }, 800);
   }
