--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ const telegramBlock = `
     <div class="telegram-content">
       <p>Отримуй новинки першими 👇</p>
       <div class="tg-links">
-        <a href="https://t.me/RelaxBox_UA_bot" target="_blank" class="tg-btn bot">🤖 Відкрити Бота</a>
+        <a href="https://t.me/KinoTochkaUA_bot" target="_blank" class="tg-btn bot">🤖 Відкрити Бота</a>
         <a href="https://t.me/KinoTochkaUA" target="_blank" class="tg-btn channel">📢 Канал</a>
       </div>
     </div>
@@ -578,6 +578,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 </body>
 </body>
 </html>
+
 
 
 
