--- a/film.html
+++ b/film.html
@@ -507,7 +507,7 @@
       <div class="film-right">
 
         <!-- 🔹 Телеграм-банер -->
-        <a href="https://t.me/RelaxBox_UA_bot" target="_blank" class="tg-banner">
+        <a href="https://t.me/RelaxBoxUA_bot?start=films_1234" target="_blank" class="tg-banner">
           <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="tg-icon">
           <span>🔥 Новинки в каналі, перегляд у боті — усе в одному місці!</span>
         </a>
