--- a/multseries.html
+++ b/multseries.html
@@ -406,6 +406,13 @@
     <div class="series-right">
       <div class="series-top-row">
       <h3 class="series-top-title">🎬 Перегляд</h3>
+
+      <!-- 🔹 Телеграм-банер -->
+      <a href="https://t.me/RelaxBoxUA_bot" target="_blank" class="tg-banner">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg"
+             alt="Telegram" class="tg-icon">
+        <span>🔥 Новинки в каналі, перегляд у боті — усе в одному місці!</span>
+      </a>
     
       <div class="series-actions">
         <button id="bookmarkSeriesBtn" class="bookmark-btn">⭐ Додати в закладки</button>
