--- a/multseries.html
+++ b/multseries.html
@@ -380,6 +380,35 @@
   color: #ccc;
   line-height: 1.3;
 }
+/* === 🔹 Telegram банер === */
+.tg-banner {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 8px;
+  width: 95%;
+  background: #0d0d0d;
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  border-radius: 10px;
+  padding: 10px 14px;
+  color: #00fff2;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 13.5px;
+  margin: 0 auto 12px auto;
+  box-shadow: none;
+  transition: none;
+}
+.tg-banner:hover {
+  background: #0d0d0d;
+  transform: none;
+  box-shadow: none;
+}
+.tg-icon {
+  width: 18px;
+  height: 18px;
+  filter: invert(58%) sepia(82%) saturate(610%) hue-rotate(138deg) brightness(97%) contrast(97%);
+}
 
   </style>
 </head>
