--- a/multseries.html
+++ b/multseries.html
@@ -395,7 +395,7 @@
   text-decoration: none;
   font-weight: 500;
   font-size: 13.5px;
-  margin: 0 auto 12px auto;
+  margin: 12px auto 12px auto;
   box-shadow: none;
   transition: none;
 }
@@ -435,13 +435,6 @@
     <div class="series-right">
       <div class="series-top-row">
       <h3 class="series-top-title">🎬 Перегляд</h3>
-
-      <!-- 🔹 Телеграм-банер -->
-      <a href="https://t.me/RelaxBoxUA_bot" target="_blank" class="tg-banner">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg"
-             alt="Telegram" class="tg-icon">
-        <span>🔥 Новинки в каналі, перегляд у боті — усе в одному місці!</span>
-      </a>
     
       <div class="series-actions">
         <button id="bookmarkSeriesBtn" class="bookmark-btn">⭐ Додати в закладки</button>
@@ -453,6 +446,12 @@
         <video id="seriesPlayer" controls playsinline muted preload="metadata" crossorigin="anonymous"></video>
         <div id="bigPlayOverlay"><div><svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg></div></div>
       </div>
+      <!-- 🔹 Телеграм-банер -->
+      <a href="https://t.me/RelaxBoxUA_bot" target="_blank" class="tg-banner">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg"
+             alt="Telegram" class="tg-icon">
+        <span>🔥 Новинки в каналі, перегляд у боті — усе в одному місці!</span>
+      </a>
 
       <div class="episodes">
         <h3>Серії</h3>
