--- a/multseries.html
+++ b/multseries.html
@@ -380,7 +380,6 @@
   color: #ccc;
   line-height: 1.3;
 }
-/* === 🔹 Telegram банер === */
 .tg-banner {
   display: flex;
   align-items: center;
@@ -395,7 +394,7 @@
   text-decoration: none;
   font-weight: 500;
   font-size: 13.5px;
-  margin: 12px auto 12px auto;
+  margin: 0 auto 12px auto; /* точно як у фільмах */
   box-shadow: none;
   transition: none;
 }
@@ -409,6 +408,7 @@
   height: 18px;
   filter: invert(58%) sepia(82%) saturate(610%) hue-rotate(138deg) brightness(97%) contrast(97%);
 }
+
 
   </style>
 </head>
@@ -431,16 +431,16 @@
      
 
     </div>
-    <!-- 🔹 Телеграм-банер -->
-    <a href="https://t.me/RelaxBoxUA_bot" target="_blank" class="tg-banner">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg"
-           alt="Telegram" class="tg-icon">
-      <span>🔥 Новинки в каналі, перегляд у боті — усе в одному місці!</span>
-    </a>
-
+   
 
     <div class="series-right">
       <div class="series-top-row">
+      <!-- 🔹 Телеграм-банер -->
+      <a href="https://t.me/RelaxBoxUA_bot" target="_blank" class="tg-banner">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg"
+             alt="Telegram" class="tg-icon">
+        <span>🔥 Новинки в каналі, перегляд у боті — усе в одному місці!</span>
+      </a
       <h3 class="series-top-title">🎬 Перегляд</h3>
     
       <div class="series-actions">
