--- a/multseries.html
+++ b/multseries.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png">
 
   <!-- iOS підтримка -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes"><div class="series-right">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="/icon-512.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/icon-512.png">
@@ -380,6 +380,34 @@
   color: #ccc;
   line-height: 1.3;
 }
+.tg-banner {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 8px;
+  width: 95%;
+  background: #0d0d0d;
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  border-radius: 10px;
+  padding: 10px 14px;
+  color: #00fff2;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 13.5px;
+  margin: 0 auto 12px auto; /* по центру і з відступом */
+  box-shadow: none;
+  transition: none;
+}
+.tg-banner:hover {
+  background: #0d0d0d;
+  transform: none;
+  box-shadow: none;
+}
+.tg-icon {
+  width: 18px;
+  height: 18px;
+  filter: invert(58%) sepia(82%) saturate(610%) hue-rotate(138deg) brightness(97%) contrast(97%);
+}
 
   </style>
 </head>
@@ -402,6 +430,12 @@
      
 
     </div>
+    <!-- 🔹 Телеграм-банер -->
+    <a href="https://t.me/RelaxBoxUA_bot?start=multseries_1234" target="_blank" class="tg-banner">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="tg-icon">
+      <span>🔥 Новинки в каналі, перегляд у боті — усе в одному місці!</span>
+    </a>
+
 
     <div class="series-right">
       <div class="series-top-row">
