--- a/multseries.html
+++ b/multseries.html
@@ -420,51 +420,65 @@
   <h1 class="series-title" id="seriesTitle" data-enc="">Мультсеріал</h1>
 
   <div class="series-wrap">
-    <div class="series-left">
-      <img id="seriesPoster" src="" alt="Постер серіалу">
-      <div class="series-meta">
-        <div><span>Жанр</span><span id="seriesGenre"></span></div>
-        <div><span>Рік</span><span id="seriesYear"></span></div>
-        <div><span>IMDb</span><span id="seriesImdb"></span></div>
-      </div>
-
-
-   <div class="series-right">
-
-      <div class="player-box">
-        <video id="seriesPlayer" controls playsinline muted preload="metadata" crossorigin="anonymous"></video>
-        <div id="bigPlayOverlay"><div><svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg></div></div>
-      </div>
-
-      <div class="episodes">
-        <h3>Серії</h3>
-        <div id="episodesContainer"></div>
-      </div>
-
-      <div class="series-desc">
-        <h3>Про серіал</h3>
-        <p id="seriesDesc">Опис…</p>
-      </div>
-      <!-- 🎬 Рекомендовані мультсеріали -->
-      <div class="recommended-section">
-        <h3>🎞️ Рекомендуємо подивитись</h3>
-        <div id="recommendedCartoonList" class="recommended-list"></div>
-      </div>
-
-      <!-- 💬 Коментарі -->
-<div class="comments-section">
-  <h3>💬 Коментарі</h3>
-
-  <div id="commentsList"></div>
-
-  <div class="comment-form">
-    <input type="text" id="username" placeholder="Ваше ім’я (необов’язково)">
-    <textarea id="commentText" placeholder="Напишіть свій коментар..." rows="3"></textarea>
-    <button id="sendComment">Надіслати</button>
+  <div class="series-left">
+  <img id="seriesPoster" src="" alt="Постер серіалу">
+  <div class="series-meta">
+    <div><span>Жанр</span><span id="seriesGenre"></span></div>
+    <div><span>Рік</span><span id="seriesYear"></span></div>
+    <div><span>IMDb</span><span id="seriesImdb"></span></div>
   </div>
 </div>
 
+<div class="series-right">
+  <!-- 🔹 Телеграм-банер -->
+  <a href="https://t.me/RelaxBoxUA_bot?start=multseries_1234" target="_blank" class="tg-banner">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="tg-icon">
+    <span>🔥 Новинки в каналі, перегляд у боті — усе в одному місці!</span>
+  </a>
+
+  <div class="series-top-row">
+    <h3 class="series-top-title">🎬 Перегляд</h3>
+    <div class="series-actions">
+      <button id="bookmarkSeriesBtn" class="bookmark-btn">⭐ Додати в закладки</button>
+      <div id="reportIssueBtn" class="report-link">⚠ Повідомити про проблему</div>
     </div>
+  </div>
+
+  <div class="player-box">
+    <video id="seriesPlayer" controls playsinline muted preload="metadata" crossorigin="anonymous"></video>
+    <div id="bigPlayOverlay">
+      <div><svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg></div>
+    </div>
+  </div>
+
+  <div class="episodes">
+    <h3>Серії</h3>
+    <div id="episodesContainer"></div>
+  </div>
+
+  <div class="series-desc">
+    <h3>Про серіал</h3>
+    <p id="seriesDesc">Опис…</p>
+  </div>
+
+  <!-- 🎬 Рекомендовані мультсеріали -->
+  <div class="recommended-section">
+    <h3>🎞️ Рекомендуємо подивитись</h3>
+    <div id="recommendedCartoonList" class="recommended-list"></div>
+  </div>
+
+  <!-- 💬 Коментарі -->
+  <div class="comments-section">
+    <h3>💬 Коментарі</h3>
+    <div id="commentsList"></div>
+    <div class="comment-form">
+      <input type="text" id="username" placeholder="Ваше ім’я (необов’язково)">
+      <textarea id="commentText" placeholder="Напишіть свій коментар..." rows="3"></textarea>
+      <button id="sendComment">Надіслати</button>
+    </div>
+  </div>
+</div>
+
   </div>
 </div>
 
