--- a/multseries.html
+++ b/multseries.html
@@ -422,11 +422,16 @@
   <div class="series-wrap">
   <div class="series-left">
   <img id="seriesPoster" src="" alt="Постер серіалу">
-  <div class="series-meta">
+   <div class="series-meta">
     <div><span>Жанр</span><span id="seriesGenre"></span></div>
     <div><span>Рік</span><span id="seriesYear"></span></div>
+    <div><span>Країна</span><span id="seriesCountry"></span></div>
+    <div><span>Режисер</span><span id="seriesDirector"></span></div>
+    <div><span>Актори</span><span id="seriesCast"></span></div>
     <div><span>IMDb</span><span id="seriesImdb"></span></div>
-  </div>
+    <div><span>Озвучка</span><span id="seriesSound"></span></div>
+    <div><span>Тривалість</span><span id="seriesDuration"></span></div>
+</div>
 </div>
 
 <div class="series-right">
