--- a/multseries.html
+++ b/multseries.html
@@ -567,18 +567,42 @@ function useSource(url) {
   }
 
   async function loadSeries(){
-    if(!seriesTitle){
-      document.body.innerHTML = "<h2 style='color:#fff;text-align:center'>Серіал не знайдено</h2>";
-      return;
-    }
+  if(!seriesTitle){
+    document.body.innerHTML = "<h2 style='color:#fff;text-align:center'>Серіал не знайдено</h2>";
+    return;
+  }
 
-    const { data, error } = await supabase
-      .from("films_site")
-      .select("*")
-      .ilike("type", "Мультсеріал")       // нечутливий до регістру
-      .ilike("title", `%${seriesTitle}%`) // частковий збіг (враховує і великі, і малі)
-      .order("season", { ascending: true })
-      .order("episode", { ascending: true });
+  // 🟢 Виправлена вибірка
+  const { data, error } = await supabase
+    .from("films_site")
+    .select("*")
+    .eq("type", "Мультсеріал")           // тепер точна перевірка типу
+    .ilike("title", `%${seriesTitle}%`)  // частковий збіг по назві
+    .order("season", { ascending: true })
+    .order("episode", { ascending: true });
+
+  if (error || !data?.length){
+    document.body.innerHTML = "<h2 style='color:#fff;text-align:center'>Мультсеріал не знайдено</h2>";
+    return;
+  }
+
+  const first = data[0];
+
+  // 🧩 Заповнюємо всю мета-інформацію
+  document.getElementById("seriesPoster").src = first.poster || "";
+  document.getElementById("seriesGenre").textContent = first.genre || "—";
+  document.getElementById("seriesYear").textContent  = first.year  || "—";
+  document.getElementById("seriesCountry").textContent = first.country || "—";
+  document.getElementById("seriesDirector").textContent = first.director || "—";
+  document.getElementById("seriesCast").textContent = first.cast || "—";
+  document.getElementById("seriesSound").textContent = first.sound || "—";
+  document.getElementById("seriesDuration").textContent = first.duration || "—";
+  document.getElementById("seriesImdb").textContent  = first.imdb  || "—";
+  document.getElementById("seriesDesc").textContent  = first.description || "Опис відсутній";
+
+  // 🎬 Далі залишаєш усе, що нижче — без змін (PRO, серії, тощо)
+
+
 
 
     if (error || !data || !data.length){
