--- a/multseries.html
+++ b/multseries.html
@@ -574,12 +574,13 @@ function useSource(url) {
 
   // 🟢 Виправлена вибірка
   const { data, error } = await supabase
-    .from("films_site")
-    .select("*")
-    .eq("type", "Мультсеріал")           // тепер точна перевірка типу
-    .ilike("title", `%${seriesTitle}%`)  // частковий збіг по назві
-    .order("season", { ascending: true })
-    .order("episode", { ascending: true });
+  .from("films_site")
+  .select("*")
+  .eq("type", "Мультсеріал")           // 🔹 точна перевірка типу
+  .ilike("title", `%${seriesTitle}%`)  // частковий збіг по назві
+  .order("season", { ascending: true })
+  .order("episode", { ascending: true });
+
 
   if (error || !data?.length){
     document.body.innerHTML = "<h2 style='color:#fff;text-align:center'>Мультсеріал не знайдено</h2>";
@@ -599,6 +600,12 @@ function useSource(url) {
   document.getElementById("seriesDuration").textContent = first.duration || "—";
   document.getElementById("seriesImdb").textContent  = first.imdb  || "—";
   document.getElementById("seriesDesc").textContent  = first.description || "Опис відсутній";
+  document.getElementById("seriesCountry").textContent = first.country || "—";
+  document.getElementById("seriesDirector").textContent = first.director || "—";
+  document.getElementById("seriesCast").textContent = first.cast || "—";
+  document.getElementById("seriesSound").textContent = first.sound || "—";
+  document.getElementById("seriesDuration").textContent = first.duration || "—";
+
 
   // 🎬 Далі залишаєш усе, що нижче — без змін (PRO, серії, тощо)
 
