--- a/bookmarks.html
+++ b/bookmarks.html
@@ -89,6 +89,8 @@
 
   <!-- ✅ Service Worker реєстрація — ставимо ПІСЛЯ усіх скриптів -->
   <script src="/sw-register.js"></script>
+  <script src="seo.js"></script>
+
 </body>
 
 </html>
