--- a/category.html
+++ b/category.html
@@ -463,6 +463,8 @@ initCategoryPage();
 </script> <!-- 🟢 ось цього закриваючого тегу не вистачало! -->
 
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+<script src="seo.js"></script>
+
 </body>
 
 </body>
