--- a/collections.html
+++ b/collections.html
@@ -222,6 +222,8 @@ const collections = [
 </script> <!-- 🟢 ось цього закриваючого тегу не вистачало! -->
 
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+<script src="seo.js"></script>
+
 </body>
 
 </body>
