--- a/index.html
+++ b/index.html
@@ -575,9 +575,12 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+<script src="seo.js"></script>
+
 </body>
 </body>
 </html>
+
 
 
 
