--- a/multseries.html
+++ b/multseries.html
@@ -942,5 +942,7 @@ async function loadRecommendedCartoons(title, genre) {
 
 </script>
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+<script src="seo.js"></script>
+
 </body>
 </html>
