--- a/new.html
+++ b/new.html
@@ -283,6 +283,8 @@ document.addEventListener("DOMContentLoaded", () => loadNewItems(1));
     });
 </script>
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+<script src="seo.js"></script>
+
 
 </body>
 </html>
