--- a/profile.html
+++ b/profile.html
@@ -1079,6 +1079,7 @@ document.addEventListener("visibilitychange", () => {
 });
 </script>
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+<script src="seo.js"></script>
 
 </body>
 </html>
