--- a/search.html
+++ b/search.html
@@ -219,5 +219,7 @@
     });
 </script>
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+<script src="seo.js"></script>
+
 </body>
 </html>
