--- a/series.html
+++ b/series.html
@@ -1345,5 +1345,7 @@ async function loadRecommendedSeries(title, genre) {
 
 </script>
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+<script src="seo.js"></script>
+
 </body>
 </html>
