--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="google0ef6285707bd1e5.html">
+
   
   <title>KinoSite — Онлайн кінотеатр</title>
   <link rel="stylesheet" href="style.css" />
@@ -582,6 +584,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 </body>
 </body>
 </html>
+
 
 
 
