--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="google-site-verification" content="google0ef6285707bd1e5.html">
+  <meta name="google-site-verification" content="aeGM2HD3kWqEDAyF_t-BuCvONyiYBJ2UA5jxg01yuG4" />
 
   
   <title>KinoSite — Онлайн кінотеатр</title>
@@ -584,6 +584,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 </body>
 </body>
 </html>
+
 
 
 
